# sqloxide

./: Cargo.toml  build.py  pyproject.toml  setup.py
.github/workflows/: ci.yml
examples/: depgraph.py
src/: lib.rs
tests/: benchmark.py  test_sqloxide.py
