[package]
name = "sqlo2"
version = "0.1.22"
authors = ["Will Eaton <me@wseaton.com>"]
edition = "2018"

[lib]
name = "sqlo2"
crate-type = ["cdylib"]

[dependencies]
pythonize = "0.17"

[dependencies.pyo3]
version = "0.17.1"
features = ["extension-module"]

[dependencies.sqlparser]
version = "0.25.0"
features = ["json_example"]
